syntax = "proto3";

package demo.v1;
option go_package = "../pb_demo";

// import "google/protobuf/api.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
// import "google/api/http.proto";
import "google/api/annotations.proto";

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DemoService {
  rpc ListDemos(ListDemosRequest) returns (ListDemosResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/Demos"
    };
  }

  rpc GetDemo(GetDemoRequest) returns (Demo) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=Demos/*}"
    };
  }

  rpc CreateDemo(CreateDemoRequest) returns (Demo) {
    option (google.api.http) = {
      post: "/v1alpha1/Demos"
      body: "Demo"
    };
  }

  rpc UpdateDemo(UpdateDemoRequest) returns (Demo) {
    option (google.api.http) = {
      patch: "/v1alpha1/{Demo.name=Demos/*}"
      body: "Demo"
    };
  }

  rpc DeleteDemo(DeleteDemoRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=Demos/*}"
    };
  }
}

message Demo {
    // @required 
    string name = 1;
}

message ListDemosRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDemosResponse {
  // The field name should match the noun "Demo" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Demo Demos = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDemoRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDemoRequest {
  // The parent resource name where the Demo is to be created.
  string parent = 1;

  // The Demo id to use for this Demo.
  string Demo_id = 2;

  // The Demo resource to create.
  // The field name should match the Noun in the method name.
  Demo Demo = 3;
}

message UpdateDemoRequest {
  // The Demo resource which replaces the resource on the server.
  Demo Demo = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDemoRequest {
  // The resource name of the Demo to be deleted.
  string name = 1;
}
